syntax = "proto3";

package types.v1;

enum RejectCode {
  REJECT_CODE_UNSPECIFIED = 0;
  REJECT_CODE_SYS_FATAL = 1;
  REJECT_CODE_SYS_TRANSIENT = 2;
  REJECT_CODE_DESTINATION_INVALID = 3;
  REJECT_CODE_CANISTER_REJECT = 4;
  REJECT_CODE_CANISTER_ERROR = 5;
}
